Added icons to stack

--- a/about.html
+++ b/about.html
@@ -43,9 +43,21 @@
       </div>
 
       <div class="about-card glass">
-        <h3>Stack</h3>
-        <p>Unity, Unreal, C#, C++, HTML/CSS/JS, React, Node.js, SEO & Performance.</p>
-      </div>
+  <h3>Stack</h3>
+  <div class="tech-logos">
+      <img src="icons/unity.png" alt="Unity">
+      <img src="icons/unreal.png" alt="Unreal Engine">
+      <img src="icons/csharp.png" alt="C#">
+      <img src="icons/cpp.png" alt="C++">
+      <img src="icons/html.png" alt="HTML">
+      <img src="icons/css.png" alt="CSS">
+      <img src="icons/js.png" alt="JavaScript">
+      <img src="icons/react.png" alt="React">
+      <img src="icons/node.png" alt="Node.js">
+      <img src="icons/seo.png" alt="SEO">
+  </div>
+</div>
+
     </div>
 
     <section class="team">
